# image-search

./: README.md  docker-compose.yml  pyproject.toml  test_interactive.py  test_multiple_search.py  test_signal_handling.py
src/: config.json  db.py  main.py  model.py
